--- a/config.json
+++ b/config.json
@@ -1,13 +1,12 @@
 {
-    "nav":{
+    "nav": {
         "imagen": "https://upload.wikimedia.org/wikipedia/commons/thumb/0/08/Netflix_2015_logo.svg/799px-Netflix_2015_logo.svg.png?20190206123158",
         "enlace": "Sign In"
     },
-
-    "header":{
+    "header": {
         "title": "STEP 1 OF 3",
         "sub-title": "Choose the plan that’s right for you",
-        "parrafo":[
+        "parrafo": [
             {
                 "texto": "Watch all you want. Ad-free."
             },
@@ -18,10 +17,8 @@
                 "texto": "Change or cancel your plan anytime."
             }
         ]
-
     },
-
-    "section":{
+    "section": {
         "card": [
             {
                 "title": "Basic",
@@ -36,7 +33,15 @@
                 "twotitle2": "$19.99"
             }
         ]
-        
+    },
+    "prices": {
+        "title": "Compare plans",
+        "tables": [
+            {
+                "p1": "Basic",
+                "p2": "Standart",
+                "p3": "Premium"
+            }
+        ]
     }
 }
-
